--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [workspace]
 members = [
   "packages/zero-app-core",
-  "packages/zero-app"
+  "packages/zero-app",
+  "packages/zero-app-yew"
 ]
 
 [workspace.package]
