--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ version = "1.0.0"
 [workspace.dependencies]
 tauri-build = { version = "1.3", features = [] }
 tauri = { version = "1.3", features = ["shell-open"] }
+wasm-pack = { version = "0.11.1", features = [] }
