--- a/apps/zero-app/package.json
+++ b/apps/zero-app/package.json
@@ -10,12 +10,16 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.417.0",
     "react": "^18.2.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
