--- a/apps/zero-app/package.json
+++ b/apps/zero-app/package.json
@@ -7,11 +7,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "shadcn": "pnpx shadcn-ui@latest"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@zero-company/zero-lib-react": "^0.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
