--- a/apps/zero-app/package.json
+++ b/apps/zero-app/package.json
@@ -14,7 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@zero-company/zero-lib-react": "^0.1.3",
+    "@zero-company/zero-lib-react": "latest",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.424.0",
