--- a/apps/zero-app/package.json
+++ b/apps/zero-app/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "tauri": "tauri",
-    "shadcn": "pnpx shadcn-ui@latest"
+    "shadcn": "pnpx shadcn@latest"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.1",
