--- a/apps/zero-app/package.json
+++ b/apps/zero-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:tauri": "tauri dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
